fix stretched photo

--- a/styles/base.less
+++ b/styles/base.less
@@ -2165,6 +2165,7 @@ body.personal {
       }
       .image-wrapper {
         display: flex;
+        align-items: center;
       }
       .text-wrapper {
         flex: 60%;
